Lagt till tester för all kod, flyttat in filer i mappar
