# src/Application/Handlers/GroupLevel/GetGroupLevelHandler.php
@@ -2,7 +2,7 @@
 
 declare(strict_types=1);
 
-namespace App\Application\Handlers;
+namespace App\Application\Handlers\GroupLevel;
 
 use App\Domain\DataTransportObjects\GroupLevelDTO;
 use App\Domain\ValueObjects\GroupLevelId;
@@ -12,14 +12,11 @@ class GetGroupLevelHandler extends GroupLevelHandler {
      * @return array<GroupLevelDTO>
      */
     public function getAll() : array {
-        $groupLevels = $this->repository->getAll();
 
-        $dto = [];
-        foreach ($groupLevels as $groupLevel) {
-            $dto[] = GroupLevelDTO::fromEntity($groupLevel);
-        }
-
-        return $dto;
+        return array_map(
+            fn ($groupLevel) => GroupLevelDTO::fromEntity($groupLevel),
+            $this->repository->getAll(),
+        );
     }
 
     public function getId(GroupLevelId $id) : GroupLevelDTO {
