# src/Application/Handlers/GroupLevel/UpdateGroupLevelHandler.php
@@ -2,9 +2,9 @@
 
 declare(strict_types=1);
 
-namespace App\Application\Handlers;
+namespace App\Application\Handlers\GroupLevel;
 
-use App\Application\Commands\UpdateGroupLevelCommand;
+use App\Application\Commands\GroupLevel\UpdateGroupLevelCommand;
 use App\Domain\DataTransportObjects\GroupLevelDTO;
 use App\Domain\ValueObjects\DateTimeValue;
 
